# weather-voice-agent

./: .env.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  requirement.txt  sarvam.py  scheme_awareness_agent.py  start_all.bat
dataset/: weather_prediction_dataset_light.csv
docs/: architecture_explanation.md  tts-mp3-fix.md
server/: app.py
web/: index.html
